<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="0dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:fontFamily="@font/montserrat"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/tv_artista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_titolo"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="13dp"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/montserrat"/>

</RelativeLayout>
